top-hero部分を仮で作成（背景の写真に編みかけ、天地中央にタイトル）

--- a/specification/No.1_Lv4/index.html
+++ b/specification/No.1_Lv4/index.html
@@ -15,16 +15,16 @@
     <div class="p-header_logo">
       <img src="img/posse_logo.png" alt="POSSE">
     </div>
-    <div class="menu-content">
-      <ul>
+    <div class="p-header_nav">
+      <ul class="p-header_nav_list">
         <li>
-          <a href="../toppage/index.html" class="menu-item_1">メニュー</a>
+          <a href="../toppage/index.html" class="p-header_nav_item">メニュー</a>
         </li>
         <li>
-          <a href="../quizpage/index.html" class="menu-item_2">メニュー</a>
+          <a href="../quizpage/index.html" class="p-header_nav_item">メニュー</a>
         </li>
         <li>
-          <a href="../quizpage/index.html" class="menu-item_3">メニュー</a>
+          <a href="../quizpage/index.html" class="p-header_nav_item">メニュー</a>
         </li>
       </ul>
     </div>
@@ -32,16 +32,16 @@
 
   <main>
     <section class="hero">
-      <div class="hero-img">
-        <div class="hero_left">
+      <div class="hero_img">
+        <div class="hero_img_left">
           <img src="img/koyo.jpg" alt="">
         </div>
-        <div class="hero_right">
+        <div class="hero_img_right">
           <img src="img/noise.jpg" alt="">
         </div>
-      </div>
-      <div class="hero_text">
-        <h1 class="hero_title">タイトル</h1>
+        <div class="hero_text">
+          <h1 class="hero_title">タイトル</h1>
+        </div>
       </div>
     </section>
 
