:hover要素と画像の繰り返し部分を作成

--- a/specification/No.1_Lv4/index.html
+++ b/specification/No.1_Lv4/index.html
@@ -86,7 +86,9 @@
               <p class="topic1_content_top_text">Q</p>
             </div>
             <div class="topic1_content_bottom">
-              <p class="topic1_content_bottom_text">A</p>
+              <div class="topic1_content_bottom_door">
+                <p class="topic1_content_bottom_text">A</p>
+              </div>
             </div>
           </div>
           <div class="topic1_contents">
@@ -94,7 +96,9 @@
               <p class="topic1_content_top_text">Q</p>
             </div>
             <div class="topic1_content_bottom">
-              <p class="topic1_content_bottom_text">A</p>
+              <div class="topic1_content_bottom_door">
+                <p class="topic1_content_bottom_text">A</p>
+              </div>
             </div>
           </div>
         </div>
