アンカータグでページを内を移動するようにした

--- a/specification/No.1_Lv4/index.html
+++ b/specification/No.1_Lv4/index.html
@@ -18,13 +18,13 @@
     <div class="p-header_nav">
       <ul class="p-header_nav_list">
         <li>
-          <a href="../toppage/index.html" class="p-header_nav_item">メニュー</a>
+          <a href="#topic1" class="p-header_nav_item">メニュー</a>
         </li>
         <li>
-          <a href="../quizpage/index.html" class="p-header_nav_item">メニュー</a>
+          <a href="#" class="p-header_nav_item">メニュー</a>
         </li>
         <li>
-          <a href="../quizpage/index.html" class="p-header_nav_item">メニュー</a>
+          <a href="#" class="p-header_nav_item">メニュー</a>
         </li>
       </ul>
     </div>
@@ -45,7 +45,7 @@
       </div>
     </section>
 
-    <section class="topic1">
+    <section class="topic1" id="topic1">
       <div class="topic1_title_container">
         <div class="topic1_title_inner">
           <div class="topic1_title_text">？？？</div>
