ヘッダーにbox-shadowをつけた

--- a/specification/No.1_Lv4/index.html
+++ b/specification/No.1_Lv4/index.html
@@ -40,7 +40,9 @@
           <img src="img/noise.jpg" alt="">
         </div>
         <div class="hero_text">
-          <h1 class="hero_title">タイトル</h1>
+          <div class="anim_box">
+            <div class="hero_title">飯田紅葉の全て</div>
+          </div>
         </div>
       </div>
     </section>
@@ -48,7 +50,7 @@
     <section class="topic1" id="topic1">
       <div class="topic_title_container">
         <div class="topic_title_inner">
-          <div class="topic_title_text">？？？</div>
+          <div class="topic_title_text">プロフィール</div>
         </div>
       </div>
       <div class="profile">
@@ -94,7 +96,7 @@
     <section class="interview">
       <div class="topic_title_container">
         <div class="topic_title_inner">
-          <div class="topic_title_text">？？？</div>
+          <div class="topic_title_text">Q&A</div>
         </div>
       </div>
       <div class="topic1_container">
@@ -145,12 +147,15 @@
           </div>
         </div>
       </div>
+      <div class="section_line">
+        <div class="section_line_img"></div>
+      </div>
     </section>
 
     <section class="topic2">
       <div class="topic_title_container">
         <div class="topic_title_inner">
-          <div class="topic_title_text">？？？</div>
+          <div class="topic_title_text">POSSE一押しポイント</div>
         </div>
       </div>
     </section>
@@ -163,6 +168,10 @@
       </div>
     </section>
   </main>
+
+  <footer class="footer">
+    <small>&copy; 風前の灯火　BASIs</small>
+  </footer>
 </body>
 
 </html>
