pullのために一旦保存

--- a/specification/No.1_Lv4/index.html
+++ b/specification/No.1_Lv4/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="hero_text">
           <div class="anim_box">
-            <div class="hero_title">飯田紅葉の全て</div>
+            <div class="hero_title anim_box">飯田紅葉の全て</div>
           </div>
         </div>
       </div>
