--- a/specification/No.1_Lv4/index.html
+++ b/specification/No.1_Lv4/index.html
@@ -104,12 +104,15 @@
           <div class="topic1_contents_package">
             <div class="topic1_contents">
               <div class="topic1_content_top">
-                <p class="topic1_content_top_text">Q</p>
+                <p class="topic1_content_top_text">あなたが大切にしている言葉は？</p>
               </div>
               <div class="topic1_content_bottom">
-                <div class="topic1_content_bottom_door">
-                  <p class="topic1_content_bottom_text">A</p>
-                </div>
+                <!-- <div class="topic1_content_answer_back"> -->
+                  <p class="topic1_content_answer_back topic1_content_answer">「ありがとう」</p>
+                <!-- </div>
+                <div class="topic1_content_bottom_door"> -->
+                  <p class="topic1_content_bottom_door topic1_content_bottom_text">A</p>
+                <!-- </div> -->
               </div>
             </div>
             <div class="topic1_contents">
@@ -117,10 +120,15 @@
                 <p class="topic1_content_top_text">Q</p>
               </div>
               <div class="topic1_content_bottom">
-                <div class="topic1_content_bottom_door">
-                  <p class="topic1_content_bottom_text">A</p>
+                <div class="topic1_content_bottom">
+                  <div class="topic1_content_answer_back">
+                    <p class="topic1_content_answer">ああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                  </div>
+                  <div class="topic1_content_bottom_door">
+                    <p class="topic1_content_bottom_text">A</p>
+                  </div>
                 </div>
-              </div>
+                </div>
             </div>
           </div>
           <div class="topic1_contents_package">
@@ -142,6 +150,9 @@
                 <p class="topic1_content_top_text">Q</p>
               </div>
               <div class="topic1_content_bottom">
+                <div class="topic1_content_answer_back">
+                  <p class="topic1_content_answer">ああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                </div>
                 <div class="topic1_content_bottom_door">
                   <p class="topic1_content_bottom_text">A</p>
                 </div>
