--- a/specification/No.1/Lv3/index.html
+++ b/specification/No.1/Lv3/index.html
@@ -161,9 +161,9 @@
           </div>
         </div>
       </div>
-      <div class="section_line">
+      <!-- <div class="section_line">
         <div class="section_line_img"></div>
-      </div>
+      </div> -->
     </section>
 
     <section class="topic2" id="recommendation">
