--- a/specification/No.2/Lv4/index.html
+++ b/specification/No.2/Lv4/index.html
@@ -165,9 +165,9 @@
           </div>
         </div>
       </div>
-      <div class="section_line">
+      <!-- <div class="section_line">
         <div class="section_line_img"></div>
-      </div>
+      </div> -->
     </section>
 
     <section class="topic2" id="recommendation">
